# cro-chat

./: .gitignore  README.md  test_output.txt
.history/: README_20260404115901.md  README_20260404115911.md  README_20260404160938.md  README_20260404160942.md  README_20260404160952.md  README_20260404161002.md  README_20260404190544.md  README_20260405144230.md  README_20260405144439.md  README_20260405162355.md  README_20260405162406.md  README_20260405162419.md  README_20260405162429.md  README_20260405170627.md  README_20260405172415.md  README_20260405172418.md  README_20260405181813.md  README_20260405181818.md  README_20260405193827.md  README_20260405193855.md  README_20260405200652.md  README_20260405201641.md  README_20260405204852.md  README_20260405204907.md  README_20260405204933.md  README_20260405204936.md  README_20260405204938.md  README_20260405204944.md  README_20260405204948.md  README_20260405214803.md  README_20260405214824.md  README_20260405214836.md  README_20260405225010.md
.history/database/: migration_ai_20260405215321.sql  (+38 more)
apps/desktop/src-tauri/: Cargo.toml
database/: migrate_pins.sql  migration_advanced_search.sql  migration_analytics.sql  migration_call_end_reason.sql  migration_call_history.sql  migration_call_presence.sql  migration_calls.sql  migration_compliance.sql  migration_integrations.sql  migration_knowledge.sql  migration_multi_tenancy.sql  migration_push_devices.sql  migration_rich_content.sql  migration_roles_moderation.sql
docs/: architecture.md
scripts/: backup.ps1  deploy.ps1  login.json  setup-xampp.ps1  test-api.ps1
(+871 files in other folders)
